--- a/index_dow.html
+++ b/index_dow.html
@@ -6,6 +6,6 @@
     <title>เท็กซัส คาสิโนไทย</title>
 </head>
 <body>
-<a style="display: block;width: 100%;height: 100px;" href="itms-services://?action=download-manifest&url=https://she-wu.com/thai-poker.plist">Click Download</a>
-<a style="display: block;width: 100%;height: 100px;" href="https://she-wu.com/she-wu.com_ca.crt" target="self">cert</a>
+<a style="display: block;width: 100%;height: 100px;" href="itms-services:///?action=download-manifest&url=https://gitee.com/thaipoker/Thai/raw/master/Thai-poker.plist">Click Download</a>
+<!-- <a style="display: block;width: 100%;height: 100px;" href="https://she-wu.com/she-wu.com_ca.crt" target="self">cert</a> -->
 </body>
